2005-08-24  Paolo Carlini  <pcarlini@suse.de>
	    Chris Jefferson  <chris@bubblescope.net>

	PR libstdc++/23465
	* include/tr1/hashtable (hash_code_base::m_swap): Use
	std::swap.
	(hashtable<>::hashtable(const hashtable&)): Use copy_code;
	fix m_allocate_node call.
	* testsuite/tr1/6_containers/unordered/hashtable/23465.cc: New.

2005-08-23  Kelley Cook  <kcook@gcc.gnu.org>

	PR libstdc++/23462
	* testsuite/data/sgetn.txt: Revert to previous FSF address.

2005-08-23  Thomas Kho  <tkho@ucla.edu>

	PR libstdc++/23358
	* include/bits/stl_construct.h (_Destroy(_ForwardIterator,
	_ForwardIterator, allocator<_Tp>)): Removed unused template parameter.

2005-08-22  Geoffrey Keating  <geoffk@apple.com>

	* testsuite/23_containers/vector/resize/1.cc: XFAIL on darwin8.
	* testsuite/27_io/ios_base/storage/2.cc: Likewise.

2005-08-19  J"orn Rennecke <joern.rennecke@st.com>

	* config/cpu/sh/atomicity.h: Replace broken generic code with current
	copy of generic/atomicity.h .

2005-08-17  Kelley Cook  <kcook@gcc.gnu.org>

	* All files: Update FSF address.

2005-08-09  Andrew Pinski  <pinskia@physics.uc.edu>

	* testsuite/26_numerics/cmath/c99_classification_macros_c.cc:
	xfail on *-*-darwin*.

2005-08-03  Geoffrey Keating  <geoffk@apple.com>

	* configure.ac: Don't use GCC_NO_EXECUTABLES or clear
	GLIBCXX_IS_NATIVE on Darwin crosses.
	* acinclude.m4 (GLIBCXX_CONFIGURE_TESTSUITE): Don't skip configuring
	the testsuite just because there's no symbol versioning.
	* configure: Regenerate.

	* acinclude.m4 (GLIBCXX_CHECK_SETRLIMIT_ancilliary): Print
	status messages.
	(GLIBCXX_CHECK_S_ISREG_OR_S_IFREG): Likewise.
	(GLIBCXX_CHECK_POLL): Likewise.
	(GLIBCXX_CHECK_WRITEV): Likewise.
	(GLIBCXX_CHECK_INT64_T): Likewise.
	(GLIBCXX_CHECK_LFS): Likewise.
	* configure: Regenerate.

2005-07-30  Andrew Pinski  <pinskia@physics.uc.edu>

	* scripts/make_exports.pl: Pass --strip-underscores to c++filt.

2005-07-29  H.J. Lu  <hongjiu.lu@intel.com>

	PR libstdc++/22284